--- a/.eslintrc
+++ b/.eslintrc
@@ -8,12 +8,12 @@
     "browser": true,
     "jquery": true,
     "node": true,
+    "es6": true,
   },
   "rules": {
     "semi": 1,
     "indent": ["warn", 2],
     "no-console": "warn",
     "no-debugger": "warn",
-    # "no-unused-vars": "warn"
   }
 }
